--- a/frontEnd/DailyShop/.gitignore
+++ b/frontEnd/DailyShop/.gitignore
@@ -1,24 +1,33 @@
+# Node.js dependencies
+node_modules/
+dist/
+.vite/
+.vitepress/
+.cache/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+pnpm-error.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Editor and system files
+.idea/
+.vscode/
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# TypeScript build files
+*.tsbuildinfo
+
+# Others
+coverage/
+*.log
